# Nova-bill-analyzer

./: .env.example  .gitignore  DEMO.md  E2E_TEST_REPORT.md  KT.md  Makefile  PRD.md  README.md  SAMPLE_QUERIES.md  TECHNICAL_WRITEUP.md  fix_caps.py  pyproject.toml  run.sh
docs/: MODEL_COMPARISON.md
docs/adr/: 001-langgraph-for-orchestration.md  002-three-agents-not-one.md  003-openai-compatible-transport.md  004-sqlite-now-clickhouse-later.md  005-confidence-and-uncertainty-handling.md  006-system-of-outcomes-substrate.md
evals/: run_eval.py
src/nova/: __init__.py  __main__.py  cli.py  config.py  llm.py  types.py
src/nova/agents/: extractor.py  router.py  validator.py
src/nova/api/: main.py
src/nova/api/static/: index.html
src/nova/orchestrator/: graph.py  nodes.py  state.py
src/nova/pdf/: render.py  synth_bol.py
src/nova/schemas/customers/acme/: decision.yaml  rules.yaml
src/nova/schemas/doc_types/: bill_of_lading.yaml
src/nova/store/: models.py  nl_query.py  repo.py
tests/: test_router.py  test_synth_bol.py  test_validator.py
